-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17
-
Component/s: hotspot
-
b14
-
x86_64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8266997 | 16u-cpu | Harold Seigel | P3 | Resolved | Fixed | master |
| JDK-8264537 | 16.0.2 | Harold Seigel | P3 | Resolved | Fixed | b04 |
| JDK-8277098 | 11.0.14 | Thomas Stuefe | P3 | Resolved | Fixed | b03 |
| JDK-8263728 | 11.0.12-oracle | Dukebot | P3 | Resolved | Fixed | b01 |
gtest/GTestWrapper.java
Here's a snippet from the log file:
[----------] 12 tests from vmErrorTest
[ RUN ] vmErrorTest.resourceMark_vm_assert
[ OK ] vmErrorTest.resourceMark_vm_assert (243 ms)
[ RUN ] vmErrorTest.assert1_vm_assert
[ OK ] vmErrorTest.assert1_vm_assert (237 ms)
[ RUN ] vmErrorTest.assert2_vm_assert
[ OK ] vmErrorTest.assert2_vm_assert (234 ms)
[ RUN ] vmErrorTest.guarantee1_vm_assert
[ OK ] vmErrorTest.guarantee1_vm_assert (229 ms)
[ RUN ] vmErrorTest.guarantee2_vm_assert
[ OK ] vmErrorTest.guarantee2_vm_assert (236 ms)
[ RUN ] vmErrorTest.fatal1_vm_assert
[ OK ] vmErrorTest.fatal1_vm_assert (247 ms)
[ RUN ] vmErrorTest.fatal2_vm_assert
[ OK ] vmErrorTest.fatal2_vm_assert (216 ms)
[ RUN ] vmErrorTest.fatal3_vm_assert
[ OK ] vmErrorTest.fatal3_vm_assert (224 ms)
[ RUN ] vmErrorTest.out_of_memory1_vm_assert
[ OK ] vmErrorTest.out_of_memory1_vm_assert (223 ms)
[ RUN ] vmErrorTest.shouldnotcallthis1_vm_assert
[ OK ] vmErrorTest.shouldnotcallthis1_vm_assert (230 ms)
[ RUN ] vmErrorTest.shouldnotreachhere1_vm_assert
[ OK ] vmErrorTest.shouldnotreachhere1_vm_assert (232 ms)
[ RUN ] vmErrorTest.unimplemented1_vm_assert
/opt/mach5/mesos/work_dir/slaves/983c483a-6907-44e0-ad29-98c7183575e2-S15067/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/3e33a835-0119-4855-b0e4-d98de1473f0f/runs/c5f058e4-aa9f-43a8-8a15-153cdfa2f509/workspace/open/test/hotspot/gtest/utilities/test_vmerror.cpp:96: Failure
Death test: child_vmErrorTest_unimplemented1_()
Result: died but not with expected exit code:
Terminated by signal 6 (core dumped)
Actual msg:
[ DEATH ] assert failed: Error: Unimplemented()*** Error in `/opt/mach5/mesos/work_dir/jib-master/install/jdk-17+10-727/linux-x64-debug.test/hotspot/gtest/server/gtestLauncher': double free or corruption (!prev): 0x0000564abacb7b00 ***
[ DEATH ] ======= Backtrace: =========
[ DEATH ] /lib64/libc.so.6(+0x81329)[0x7ff4a810a329]
[ DEATH ] /opt/mach5/mesos/work_dir/jib-master/install/jdk-17+10-727/linux-x64-debug.test/hotspot/gtest/server/libjvm.so(+0x1db1b5c)[0x7ff4aa50ab5c]
[ DEATH ] /lib64/libc.so.6(__cxa_finalize+0x9a)[0x7ff4a80c30aa]
[ DEATH ] /opt/mach5/mesos/work_dir/jib-master/install/jdk-17+10-727/linux-x64-debug.test/hotspot/gtest/server/libjvm.so(+0x354a63)[0x7ff4a8aada63]
[ DEATH ] ======= Memory map: ========
[ DEATH ] 60e800000-62dc00000 rw-p 00000000 00:00 0
[ DEATH ] 62dc00000-800020000 ---p 00000000 00:00 0
[ DEATH ] 800020000-800030000 rw-p 00000000 00:00 0
[ DEATH ] 800030000-800040000 ---p 00000000 00:00 0
[ DEATH ] 800040000-800080000 rw-p 00000000 00:00 0
[ DEATH ] 800080000-840000000 ---p 00000000 00:00 0
[ DEATH ] 564aba7c0000-564aba7c1000 r-xp 00000000 08:03 872849400 /opt/mach5/mesos/work_dir/jib-master/install/jdk-17+10-727/linux-x64-debug.test/hotspot/gtest/server/gtestLauncher
[ DEATH ] 564aba7c1000-564aba7c2000 r--p 00000000 08:03 872849400 /opt/mach5/mesos/work_dir/jib-master/install/jdk-17+10-727/linux-x64-debug.test/hotspot/gtest/server/gtestLauncher
[ DEATH ] 564aba7c2000-564aba7c3000 rw-p 00001000 08:03 872849400 /opt/mach5/mesos/work_dir/jib-master/install/jdk-17+10-727/linux-x64-debug.test/hotspot/gtest/server/gtestLauncher
[ DEATH ] 564abac0d000-564abb144000 rw-p 00000000 00:00 0 [heap]
[ DEATH ] 7ff430000000-7ff430021000 rw-p 00000000 00:00 0
[ DEATH ] 7ff430021000-7ff434000000 ---p 00000000 00:00 0
[ DEATH ] 7ff434000000-7ff434021000 rw-p 00000000 00:00 0
[ DEATH ] 7ff434021000-7ff438000000 ---p 00000000 00:00 0
[ DEATH ] 7ff438000000-7ff438021000 rw-p 00000000 00:00 0
[ DEATH ] 7ff438021000-7ff43c000000 ---p 00000000 00:00 0
[ DEATH ] 7ff43c000000-7ff43c021000 rw-p 00000000 00:00 0
[ DEATH ] 7ff43c021000-7ff440000000 ---p 00000000 00:00 0
[ DEATH ] 7ff440000000-7ff440107000 rw-p 00000000 00:00 0
[ DEATH ] 7ff440107000-7ff444000000 ---p 00000000 00:00 0
[ DEATH ] 7ff444000000-7ff444021000 rw-p 00000000 00:00 0
[ DEATH ] 7ff444021000-7ff448000000 ---p 00000000 00:00 0
[ DEATH ] 7ff448000000-7ff448021000 rw-p 00000000 00:00 0
[ DEATH ] 7ff448021000-7ff44c000000 ---p 00000000 00:00 0
[ DEATH ] 7ff44c000000-7ff44c0c6000 rw-p 00000000 00:00 0
[ DEATH ] 7ff44c0c6000-7ff450000000 ---p 00000000 00:00 0
[ DEATH ] 7ff450000000-7ff450021000 rw-p 00000000 00:00 0
[ DEATH ] 7ff450021000-7ff454000000 ---p 00000000 00:00 0
[ DEATH ] 7ff454000000-7ff454021000 rw-p 00000000 00:00 0
[ DEATH ] 7ff454021000-7ff458000000 ---p 00000000 00:00 0
[ DEATH ] 7ff458000000-7ff458021000 rw-p 00000000 00:00 0
[ DEATH ] 7ff458021000-7ff45c000000 ---p 00000000 00:00 0
[ DEATH ] 7ff45c000000-7ff45c021000 rw-p 00000000 00:00 0
[ DEATH ] 7ff45c021000-7ff460000000 ---p 00000000 00:00 0
[ DEATH ] 7ff460000000-7ff460021000 rw-p 00000000 00:00 0
[ DEATH ] 7ff460021000-7ff464000000 ---p 00000000 00:00 0
[ DEATH ] 7ff464000000-7ff464021000 rw-p 00000000 00:00 0
[ DEATH ] 7ff464021000-7ff468000000 ---p 00000000 00:00 0
[ DEATH ] 7ff468000000-7ff468021000 rw-p 00000000 00:00 0
[ DEATH ] 7ff468021000-7ff46c000000 ---p 00000000 00:00 0
[ DEATH ] 7ff46dafa000-7ff46dafb000 ---p 00000000 00:00 0
[ DEATH ] 7ff46dafb000-7ff46dbfc000 rw-p 00000000 00:00 0
[ DEATH ] 7ff46dbfc000-7ff46dc00000 ---p 00000000 00:00 0
[ DEATH ] 7ff46dc00000-7ff46dcfd000 rw-p 00000000 00:00 0
[ DEATH ] 7ff46dcfd000-7ff46dd01000 ---p 00000000 00:00 0
[ DEATH ] 7ff46dd01000-7ff46ddfe000 rw-p 00000000 00:00 0
[ DEATH ] 7ff46ddfe000-7ff46de02000 ---p 00000000 00:00 0
[ DEATH ] 7ff46de02000-7ff46deff000 rw-p 00000000 00:00 0
[ DEATH ] 7ff46deff000-7ff46df03000 ---p 00000000 00:00 0
[ DEATH ] 7ff46df03000-7ff470000000 rw-p 00000000 00:00 0
[ DEATH ] 7ff470000000-7ff470021000 rw-p 00000000 00:00 0
[ DEATH ] 7ff470021000-7ff474000000 ---p 00000000 00:00 0
[ DEATH ] 7ff474000000-7ff474021000 rw-p 00000000 00:00 0
[ DEATH ] 7ff474021000-7ff478000000 ---p 00000000 00:00 0
[ DEATH ] 7ff478000000-7ff478021000 rw-p 00000000 00:00 0
[ DEATH ] 7ff478021000-7ff47c000000 ---p 00000000 00:00 0
[ DEATH ] 7ff47c0f9000-7ff47c0fd000 ---p 00000000 00:00 0
[ DEATH ] 7ff47c0fd000-7ff47c1fa000 rw-p 00000000 00:00 0
[ DEATH ] 7ff47c1fa000-7ff47c1fe000 ---p 00000000 00:00 0
[ DEATH ] 7ff47c1fe000-7ff47c2fb000 rw-p 00000000 00:00 0
[ DEATH ] 7ff47c2fb000-7ff47c2ff000 ---p 00000000 00:00 0
[ DEATH ] 7ff47c2ff000-7ff47c3fc000 rw-p 00000000 00:00 0
[ DEATH ] 7ff47c3fc000-7ff47c400000 ---p 00000000 00:00 0
[ DEATH ] 7ff47c400000-7ff47c4fd000 rw-p 00000000 00:00 0
[ DEATH ] 7ff47c4fd000-7ff47c501000 ---p 00000000 00:00 0
[ DEATH ] 7ff47c501000-7ff47c5fe000 rw-p 00000000 00:00 0
[ DEATH ] 7ff47c5fe000-7ff47c602000 ---p 00000000 00:00 0
[ DEATH ] 7ff47c602000-7ff47c6ff000 rw-p 00000000 00:00 0
[ DEATH ] 7ff47c6ff000-7ff47c703000 ---p 00000000 00:00 0
[ DEATH ] 7ff47c703000-7ff47cb70000 rw-p 00000000 00:00 0
[ DEATH ] 7ff47cb70000-7ff47d000000 ---p 00000000 00:00 0
[ DEATH ] 7ff47d053000-7ff47d054000 ---p 00000000 00:00 0
[ DEATH ] 7ff47d054000-7ff47d231000 rw-p 00000000 00:00 0
[ DEATH ] 7ff47d231000-7ff47d232000 ---p 00000000 00:00 0
[ DEATH ] 7ff47d232000-7ff47d333000 rw-p 00000000 00:00 0
[ DEATH ] 7ff47d333000-7ff47d334000 ---p 00000000 00:00 0
[ DEATH ] 7ff47d334000-7ff47dc3d000 rw-p 00000000 00:00 0
[ DEATH ] 7ff47dc3d000-7ff47dc3e000 ---p 00000000 00:00 0
[ DEATH ] 7ff47dc3e000-7ff47dd3f000 rw-p 00000000 00:00 0
[ DEATH ] 7ff47dd3f000-7ff47dd40000 ---p 00000000 00:00 0
[ DEATH ] 7ff47dd40000-7ff47de41000 rw-p 00000000 00:00 0
[ DEATH ] 7ff47de41000-7ff47de42000 ---p 00000000 00:00 0
[ DEATH ] 7ff47de42000-7ff47e794000 rw-p 00000000 00:00 0
[ DEATH ] 7ff47e794000-7ff485c24000 ---p 00000000 00:00 0
[ DEATH ] 7ff485c24000-7ff4863f4000 rw-p 00000000 00:00 0
[ DEATH ] 7ff4863f4000-7ff48d884000 ---p 00000000 00:00 0
[ DEATH ] 7ff48d884000-7ff48d97e000 rw-p 00000000 00:00 0
[ DEATH ] 7ff48d97e000-7ff48e810000 ---p 00000000 00:00 0
[ DEATH ] 7ff48e810000-7ff48e90a000 rw-p 00000000 00:00 0
[ DEATH ] 7ff48e90a000-7ff48f79c000 ---p 00000000 00:00 0
[ DEATH ] 7ff48f79c000-7ff48f896000 rw-p 00000000 00:00 0
[ DEATH ] 7ff48f896000-7ff490728000 ---p 00000000 00:00 0
[ DEATH ] 7ff490728000-7ff490f35000 rw-p 00000000 00:00 0
[ DEATH ] 7ff490f35000-7ff49101b000 ---p 00000000 00:00 0
[ DEATH ] 7ff49101b000-7ff49128b000 rwxp 00000000 00:00 0
[ DEATH ] 7ff49128b000-7ff4915ad000 ---p 00000000 00:00 0
[ DEATH ] 7ff4915ad000-7ff49181d000 rwxp 00000000 00:00 0
[ DEATH ] 7ff49181d000-7ff498ae4000 ---p 00000000 00:00 0
[ DEATH ] 7ff498ae4000-7ff498d54000 rwxp 00000000 00:00 0
[ DEATH ] 7ff498d54000-7ff4a001b000 ---p 00000000 00:00 0
[ DEATH ] 7ff4a001b000-7ff4a0027000 r-xp 00000000 08:03 2881766 /usr/lib64/libnss_files-2.17.so
[ DEATH ] 7ff4a0027000-7ff4a0226000 ---p 0000c000 08:03 2881766 /usr/lib64/libnss_files-2.17.so
[ DEATH ] 7ff4a0226000-7ff4a0227000 r--p 0000b000 08:03 2881766 /usr/lib64/libnss_files-2.17.so
[ DEATH ] 7ff4a0227000-7ff4a0228000 rw-p 0000c000 08:03 2881766 /usr/lib64/libnss_files-2.17.so
[ DEATH ] 7ff4a0228000-7ff4a022e000 rw-p 00000000 00:00 0
[ DEATH ] 7ff4a784b000-7ff4a7860000 r-xp 00000000 08:03 237 /usr/lib64/libgcc_s-4.8.5-20150702.so.1
[ DEATH ] 7ff4a7860000-7ff4a7a5f000 ---p 00015000 08:03 237 /usr/lib64/libgcc_s-4.8.5-20150702.so.1
[ DEATH ] 7ff4a7a5f000-7ff4a7a60000 r--p 00014000 08:03 237 /usr/lib64/libgcc_s-4.8.5-20150702.so.1
[ DEATH ] 7ff4a7a60000-7ff4a7a61000 rw-p 00015000 08:03 237 /usr/lib64/libgcc_s-4.8.5-20150702.so.1
[ DEATH ] 7ff4a7a61000-7ff4a7a78000 r-xp 00000000 08:03 2881774 /usr/lib64/libpthread-2.17.so
[ DEATH ] 7ff4a7a78000-7ff4a7c77000 ---p 00017000 08:03 2881774 /usr/lib64/libpthread-2.17.so
[ DEATH ] 7ff4a7c77000-7ff4a7c78000 r--p 00016000 08:03 2881774 /usr/lib64/libpthread-2.17.so
[ DEATH ] 7ff4a7c78000-7ff4a7c79000 rw-p 00017000 08:03 2881774 /usr/lib64/libpthread-2.17.so
[ DEATH ] 7ff4a7c79000-7ff4a7c7d000 rw-p 00000000 00:00 0
[ DEATH ] 7ff4a7c7d000-7ff4a7c7f000 r-xp 00000000 08:03 2881754 /usr/lib64/libdl-2.17.so
[ DEATH ] 7ff4a7c7f000-7ff4a7e7f000 ---p 00002000 08:03 2881754 /usr/lib64/libdl-2.17.so
[ DEATH ] 7ff4a7e7f000-7ff4a7e80000 r--p 00002000 08:03 2881754 /usr/lib64/libdl-2.17.so
[ DEATH ] 7ff4a7e80000-7ff4a7e81000 rw-p 00003000 08:03 2881754 /usr/lib64/libdl-2.17.so
[ DEATH ] 7ff4a7e81000-7ff4a7e88000 r-xp 00000000 08:03 1384391 /usr/lib64/librt-2.17.so
[ DEATH ] 7ff4a7e88000-7ff4a8087000 ---p 00007000 08:03 1384391 /usr/lib64/librt-2.17.so
[ DEATH ] 7ff4a8087000-7ff4a8088000 r--p 00006000 08:03 1384391 /usr/lib64/librt-2.17.so
[ DEATH ] 7ff4a8088000-7ff4a8089000 rw-p 00007000 08:03 1384391 /usr/lib64/librt-2.17.so
[ DEATH ] 7ff4a8089000-7ff4a824d000 r-xp 00000000 08:03 2881748 /usr/lib64/libc-2.17.so
[ DEATH ] 7ff4a824d000-7ff4a844c000 ---p 001c4000 08:03 2881748 /usr/lib64/libc-2.17.so
[ DEATH ] 7ff4a844c000-7ff4a8450000 r--p 001c3000 08:03 2881748 /usr/lib64/libc-2.17.so
[ DEATH ] 7ff4a8450000-7ff4a8452000 rw-p 001c7000 08:03 2881748 /usr/lib64/libc-2.17.so
[ DEATH ] 7ff4a8452000-7ff4a8457000 rw-p 00000000 00:00 0
[ DEATH ] 7ff4a8457000-7ff4a8558000 r-xp 00000000 08:03 2881756 /usr/lib64/libm-2.17.so
[ DEATH ] 7ff4a8558000-7ff4a8757000 ---p 00101000 08:03 2881756 /usr/lib64/libm-2.17.so
[ DEATH ] 7ff4a8757000-7ff4a8758000 r--p 00100000 08:03 2881756 /usr/lib64/libm-2.17.so
[ DEATH ] 7ff4a8758000-7ff4a8759000 rw-p 00101000 08:03 2881756 /usr/lib64/libm-2.17.so
[ DEATH ] 7ff4a8759000-7ff4aaab6000 r-xp 00000000 08:03 872849401 /opt/mach5/mesos/work_dir/jib-master/install/jdk-17+10-727/linux-x64-debug.test/hotspot/gtest/server/libjvm.so
[ DEATH ] 7ff4aaab6000-7ff4aaab7000 ---p 0235d000 08:03 872849401 /opt/mach5/mesos/work_dir/jib-master/install/jdk-17+10-727/linux-x64-debug.test/hotspot/gtest/server/libjvm.so
[ DEATH ] 7ff4aaab7000-7ff4aabb1000 r--p 0235d000 08:03 872849401 /opt/mach5/mesos/work_dir/jib-master/install/jdk-17+10-727/linux-x64-debug.test/hotspot/gtest/server/libjvm.so
[ DEATH ] 7ff4aabb1000-7ff4aabe7000 rw-p 02457000 08:03 872849401 /opt/mach5/mesos/work_dir/jib-master/install/jdk-17+10-727/linux-x64-debug.test/hotspot/gtest/server/libjvm.so
[ DEATH ] 7ff4aabe7000-7ff4aaf14000 rw-p 00000000 00:00 0
[ DEATH ] 7ff4aaf14000-7ff4aaf36000 r-xp 00000000 08:03 330344 /usr/lib64/ld-2.17.so
[ DEATH ] 7ff4aaf63000-7ff4aafe8000 rw-p 00000000 00:00 0
[ DEATH ] 7ff4aafe8000-7ff4ab0ce000 ---p 00000000 00:00 0
[ DEATH ] 7ff4ab0ce000-7ff4ab0d3000 rw-p 00000000 00:00 0
[ DEATH ] 7ff4ab0d3000-7ff4ab0da000 ---p 00000000 00:00 0
[ DEATH ] 7ff4ab0da000-7ff4ab0fe000 r-xp 00000000 08:03 209088411 /opt/mach5/mesos/work_dir/jib-master/install/jdk-17+10-727/linux-x64-debug.jdk/jdk-17/fastdebug/lib/libjava.so
[ DEATH ] 7ff4ab0fe000-7ff4ab0ff000 ---p 00024000 08:03 209088411 /opt/mach5/mesos/work_dir/jib-master/install/jdk-17+10-727/linux-x64-debug.jdk/jdk-17/fastdebug/lib/libjava.so
[ DEATH ] 7ff4ab0ff000-7ff4ab100000 r--p 00024000 08:03 209088411 /opt/mach5/mesos/work_dir/jib-master/install/jdk-17+10-727/linux-x64-debug.jdk/jdk-17/fastdebug/lib/libjava.so
[ DEATH ] 7ff4ab100000-7ff4ab101000 rw-p 00025000 08:03 209088411 /opt/mach5/mesos/work_dir/jib-master/install/jdk-17+10-727/linux-x64-debug.jdk/jdk-17/fastdebug/lib/libjava.so
[ DEATH ] 7ff4ab101000-7ff4ab102000 rw-p 00000000 00:00 0
[ DEATH ] 7ff4ab102000-7ff4ab11f000 r-xp 00000000 08:03 209088415 /opt/mach5/mesos/work_dir/jib-master/install/jdk-17+10-727/linux-x64-debug.jdk/jdk-17/fastdebug/lib/libjimage.so
[ DEATH ] 7ff4ab11f000-7ff4ab121000 r--p 0001c000 08:03 209088415 /opt/mach5/mesos/work_dir/jib-master/install/jdk-17+10-727/linux-x64-debug.jdk/jdk-17/fastdebug/lib/libjimage.so
[ DEATH ] 7ff4ab121000-7ff4ab122000 rw-p 0001e000 08:03 209088415 /opt/mach5/mesos/work_dir/jib-master/install/jdk-17+10-727/linux-x64-debug.jdk/jdk-17/fastdebug/lib/libjimage.so
[ DEATH ] 7ff4ab122000-7ff4ab127000 rw-p 00000000 00:00 0
[ DEATH ] 7ff4ab128000-7ff4ab129000 rw-p 00000000 00:00 0
[ DEATH ] 7ff4ab129000-7ff4ab131000 rw-s 00000000 08:03 608883363 /tmp/hsperfdata_mach5-one/24756 (deleted)
[ DEATH ] 7ff4ab131000-7ff4ab132000 ---p 00000000 00:00 0
[ DEATH ] 7ff4ab132000-7ff4ab133000 r--p 00000000 00:00 0
[ DEATH ] 7ff4ab133000-7ff4ab134000 rwxp 00000000 00:00 0
[ DEATH ] 7ff4ab134000-7ff4ab135000 rw-p 00000000 00:00 0
[ DEATH ] 7ff4ab135000-7ff4ab136000 r--p 00021000 08:03 330344 /usr/lib64/ld-2.17.so
[ DEATH ] 7ff4ab136000-7ff4ab137000 rw-p 00022000 08:03 330344 /usr/lib64/ld-2.17.so
[ DEATH ] 7ff4ab137000-7ff4ab138000 rw-p 00000000 00:00 0
[ DEATH ] 7ffd576bf000-7ffd576c3000 ---p 00000000 00:00 0
[ DEATH ] 7ffd576c3000-7ffd577bf000 rw-p 00000000 00:00 0 [stack]
[ DEATH ] 7ffd577e8000-7ffd577eb000 r--p 00000000 00:00 0 [vvar]
[ DEATH ] 7ffd577eb000-7ffd577ec000 r-xp 00000000 00:00 0 [vdso]
[ DEATH ] ffffffffff600000-ffffffffff601000 r-xp 00000000 00:00 0 [vsyscall]
[ DEATH ]
[ FAILED ] vmErrorTest.unimplemented1_vm_assert (6528 ms)
[----------] 12 tests from vmErrorTest (9079 ms total)
- backported by
-
JDK-8263728 gtest/GTestWrapper.java vmErrorTest.unimplemented1_vm_assert failed
-
- Resolved
-
-
JDK-8264537 gtest/GTestWrapper.java vmErrorTest.unimplemented1_vm_assert failed
-
- Resolved
-
-
JDK-8266997 gtest/GTestWrapper.java vmErrorTest.unimplemented1_vm_assert failed
-
- Resolved
-
-
JDK-8277098 gtest/GTestWrapper.java vmErrorTest.unimplemented1_vm_assert failed
-
- Resolved
-
- duplicates
-
JDK-8261917 gtest/LargePageGtests.java#use-large-pages os.page_size_for_region_with_zero_min_pages_vm_assert failed
-
- Closed
-
-
JDK-8262072 gtest/MetaspaceGtests.java#reclaim-aggressive-debug failed metaspace.test_overwriter_vm_assert
-
- Closed
-
- relates to
-
JDK-8263567 gtests don't terminate the VM safely
-
- Resolved
-
-
JDK-8263564 Consolidate POSIX code for runtime exit support: os::shutdown, os::abort and os::die
-
- Resolved
-
-
JDK-8166727 javac crashed: [jimage.dll+0x1942] ImageStrings::find+0x28
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/46d85236
-
Commit
openjdk/jdk16u/3464a0f1
-
Commit
openjdk/jdk/8c1112a6
-
Review
openjdk/jdk11u-dev/590
-
Review
openjdk/jdk16u/98
-
Review
openjdk/jdk/2884
-
Review
openjdk/jdk/3002