8261916: gtest/GTestWrapper.java vmErrorTest.unimplemented1_vm_assert failed