src/hotspot/os/solaris/os_solaris.cpp
@@ -1343,7 +1343,7 @@ void os::abort(bool dump_core, void* siginfo, const void* context) {
     ::abort(); // dump core (for debugging)
   }
 
-  ::exit(1);
+  ::_exit(1);
 }
 
 // Die immediately, no exit hook, no abort hook, no cleanup.
